fixed alignment issue
issue with project name display

--- a/styles/main.css
+++ b/styles/main.css
@@ -95,7 +95,6 @@ h1 {
     margin-bottom: 2vw;
     margin-right: 2vw;
     margin-left: 2vw;
-    width: 100%;
 }
 
 #project_text {
@@ -135,7 +134,7 @@ h1 {
     }
 
     #project_description h2 {
-        text-align: left;
+        text-align: right;
         font-size: 245%;
     }
 
